--- a/Raster-Graphics/Raster-Graphics.vcxproj
+++ b/Raster-Graphics/Raster-Graphics.vcxproj
@@ -139,10 +139,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Console.h" />
+    <ClInclude Include="Engine.h" />
     <ClInclude Include="Image.h" />
+    <ClInclude Include="Invoker.h" />
+    <ClInclude Include="PBM.h" />
+    <ClInclude Include="Receiver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Console.cpp" />
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Image.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="PBM.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
