--- a/Raster-Graphics/Raster-Graphics.vcxproj
+++ b/Raster-Graphics/Raster-Graphics.vcxproj
@@ -141,10 +141,14 @@
   <ItemGroup>
     <ClInclude Include="Console.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="ICommand.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="Invoker.h" />
     <ClInclude Include="PBM.h" />
+    <ClInclude Include="PGM.h" />
+    <ClInclude Include="PPM.h" />
     <ClInclude Include="Receiver.h" />
+    <ClInclude Include="RGB.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Console.cpp" />
@@ -152,6 +156,10 @@
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PBM.cpp" />
+    <ClCompile Include="PGM.cpp" />
+    <ClCompile Include="PPM.cpp" />
+    <ClCompile Include="Receiver.cpp" />
+    <ClCompile Include="RGB.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
