--- a/Raster-Graphics/Raster-Graphics.vcxproj
+++ b/Raster-Graphics/Raster-Graphics.vcxproj
@@ -139,27 +139,48 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Close.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Exit.h" />
+    <ClInclude Include="Grayscale.h" />
+    <ClInclude Include="Help.h" />
     <ClInclude Include="ICommand.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="Invoker.h" />
+    <ClInclude Include="Load.h" />
+    <ClInclude Include="Monochrome.h" />
+    <ClInclude Include="Negative.h" />
     <ClInclude Include="PBM.h" />
     <ClInclude Include="PGM.h" />
     <ClInclude Include="PPM.h" />
     <ClInclude Include="Receiver.h" />
     <ClInclude Include="RGB.h" />
+    <ClInclude Include="Rotate.h" />
+    <ClInclude Include="Save.h" />
+    <ClInclude Include="SaveAs.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Close.cpp" />
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Exit.cpp" />
+    <ClCompile Include="Help.cpp" />
     <ClCompile Include="Image.cpp" />
+    <ClCompile Include="Invoker.cpp" />
+    <ClCompile Include="Load.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Monochrome.cpp" />
+    <ClCompile Include="Negative.cpp" />
     <ClCompile Include="PBM.cpp" />
     <ClCompile Include="PGM.cpp" />
     <ClCompile Include="PPM.cpp" />
     <ClCompile Include="Receiver.cpp" />
     <ClCompile Include="RGB.cpp" />
+    <ClCompile Include="Rotate.cpp" />
+    <ClCompile Include="Save.cpp" />
+    <ClCompile Include="SaveAs.cpp" />
+    <ClCompile Include="Grayscale.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
